# Booqer

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/cli/src/cmds/: upload.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  context.rs  db.rs  lib.rs  metadata.rs  models.rs  s3.rs
crates/extraction/: Cargo.toml
crates/extraction/src/: lib.rs  pdf.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: db.rs  gpt.rs  lib.rs  regex.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  s3.rs
