[package]
name = "booqer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.4.0", features = ["derive"] }
common = { path = "../../crates/common" }
metadata = { path = "../../crates/metadata" }
storage = { path = "../../crates/storage" }
extraction = { path = "../../crates/extraction" }
tokio = { version = "1.46.1", features = ["full"] }