[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
openai = "1.1.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
lopdf = "0.36.0"
aws-config = "1.8.1"
aws-sdk-s3 = "1.91.0"
hex = "0.4.3"
sha2 = "0.10.9"
dotenv = "0.15.0"
config = "0.15.12"
